[gd_scene load_steps=27 format=3 uid="uid://bvaiadwlna0ip"]

[ext_resource type="Theme" uid="uid://bqjx1o53xo1v6" path="res://Assets/Themes/MainTheme.tres" id="1_hnyxl"]
[ext_resource type="Script" path="res://Main.gd" id="1_uxxeo"]
[ext_resource type="Script" path="res://addons/dockable_container/dockable_container.gd" id="3_1uq5w"]
[ext_resource type="Script" path="res://addons/dockable_container/layout_panel.gd" id="4_7mtdk"]
[ext_resource type="Script" path="res://addons/dockable_container/layout.gd" id="5_ip3ue"]
[ext_resource type="Texture2D" uid="uid://dicls5h3u6ckf" path="res://Assets/Basic Icons/Add.png" id="6_r5gtn"]
[ext_resource type="Texture2D" uid="uid://c0lgwk60pwwdx" path="res://Assets/Basic Icons/Refresh.png" id="7_hmtfy"]
[ext_resource type="Texture2D" uid="uid://djk7bfnygs3iu" path="res://Assets/Ruleset Logos/DnD_Bug_1c_Blk_V1_XL_RGB Copy.png" id="8_f420e"]
[ext_resource type="Texture2D" uid="uid://dsdke1duouxap" path="res://Assets/Splash Screen/Version.png" id="9_3dk5g"]
[ext_resource type="Texture2D" uid="uid://dwxld143413vf" path="res://Assets/Basic Icons/d-and-d.svg" id="9_5ku5e"]
[ext_resource type="Texture2D" uid="uid://bf0hs76ilw1st" path="res://Assets/Basic Icons/book-bookmark-solid.svg" id="9_7w1fw"]
[ext_resource type="Texture2D" uid="uid://cuk1q342axru" path="res://Assets/Basic Icons/xmark-solid.svg" id="10_1aiwj"]
[ext_resource type="Texture2D" uid="uid://c6j6khryuva0u" path="res://Assets/Basic Icons/beer-mug-empty-solid.svg" id="12_5qf4r"]
[ext_resource type="FontFile" uid="uid://dvwe1n5qn2bo0" path="res://Assets/Fonts/Segoe UI Bold.ttf" id="13_tnq5r"]
[ext_resource type="Script" path="res://Debug.gd" id="14_v20j8"]
[ext_resource type="FontFile" uid="uid://cnk6bhvrw6w6a" path="res://Assets/Fonts/CaskaydiaCoveNerdFontMono-Regular.ttf" id="15_t4xn5"]
[ext_resource type="FontFile" uid="uid://cgynyh2ls2jq" path="res://Assets/Fonts/CaskaydiaCoveNerdFontMono-Bold.ttf" id="16_5unro"]
[ext_resource type="FontFile" uid="uid://c73ut4ilicail" path="res://Assets/Fonts/CaskaydiaCoveNerdFontMono-Italic.ttf" id="17_fefu0"]
[ext_resource type="FontFile" uid="uid://dw5f2f52iy41o" path="res://Assets/Fonts/CaskaydiaCoveNerdFontMono-BoldItalic.ttf" id="18_4f747"]

[sub_resource type="Resource" id="Resource_qqlnt"]
resource_name = "Tabs"
script = ExtResource("4_7mtdk")
names = PackedStringArray("Files", "Spaces")
current_tab = 0

[sub_resource type="Resource" id="Resource_52byb"]
resource_name = "Layout"
script = ExtResource("5_ip3ue")
root = SubResource("Resource_qqlnt")
hidden_tabs = {}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e4rg5"]
content_margin_left = 10.0
content_margin_right = 28.0
bg_color = Color(0.0509804, 0.0666667, 0.0901961, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
corner_detail = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_b1aso"]
content_margin_left = 10.0
content_margin_right = 10.0
bg_color = Color(0.160784, 0.168627, 0.184314, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_detail = 10
expand_margin_bottom = 10.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3vtfq"]
content_margin_left = 10.0
content_margin_right = 10.0
bg_color = Color(0.141176, 0.14902, 0.164706, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
corner_detail = 10

[sub_resource type="Resource" id="Resource_y456i"]
resource_name = "Tabs"
script = ExtResource("4_7mtdk")
names = PackedStringArray("Inspector", "Dictionary")
current_tab = 1

[sub_resource type="Resource" id="Resource_aeven"]
resource_name = "Layout"
script = ExtResource("5_ip3ue")
root = SubResource("Resource_y456i")
hidden_tabs = {}

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_hnyxl")
script = ExtResource("1_uxxeo")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.141176, 0.14902, 0.164706, 1)

[node name="Control2" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Control2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 12.0
offset_right = -12.0
offset_bottom = -13.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="VBoxContainer2" type="VBoxContainer" parent="Control2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.3
theme_override_constants/separation = 10

[node name="Control" type="Control" parent="Control2/HBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="MenuBar" type="MenuBar" parent="Control2/HBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(0, 29)
layout_mode = 2
flat = true

[node name="File" type="PopupMenu" parent="Control2/HBoxContainer/VBoxContainer2/MenuBar"]
item_count = 12
item_0/text = "New Article"
item_0/id = 0
item_1/text = "New Timeline"
item_1/id = 1
item_2/text = ""
item_2/id = 2
item_2/separator = true
item_3/text = "Open File"
item_3/id = 3
item_4/text = "Open Folder"
item_4/id = 4
item_5/text = "Open Recents"
item_5/id = 5
item_6/text = ""
item_6/id = 6
item_6/separator = true
item_7/text = "Save"
item_7/id = 7
item_8/text = "Save As"
item_8/id = 8
item_9/text = ""
item_9/id = 9
item_9/separator = true
item_10/text = "Exit to Project List"
item_10/id = 10
item_11/text = "Exit to Desktop"
item_11/id = 11

[node name="Edit" type="PopupMenu" parent="Control2/HBoxContainer/VBoxContainer2/MenuBar"]
item_count = 2
item_0/text = "Undo"
item_0/id = 0
item_1/text = "Redo"
item_1/id = 1

[node name="View" type="PopupMenu" parent="Control2/HBoxContainer/VBoxContainer2/MenuBar"]

[node name="Terminal" type="PopupMenu" parent="Control2/HBoxContainer/VBoxContainer2/MenuBar"]

[node name="Help" type="PopupMenu" parent="Control2/HBoxContainer/VBoxContainer2/MenuBar"]
item_count = 5
item_0/text = "About"
item_0/id = 0
item_1/text = "Documentation"
item_1/id = 1
item_2/text = "Website"
item_2/id = 2
item_3/text = ""
item_3/id = 3
item_3/separator = true
item_4/text = "Check for Updates"
item_4/id = 4

[node name="Panel" type="Panel" parent="Control2/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3

[node name="DockableContainer" type="Container" parent="Control2/HBoxContainer/VBoxContainer2/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_right = -8.0
offset_bottom = -7.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_1uq5w")
tab_alignment = 0
layout = SubResource("Resource_52byb")

[node name="Files" type="VBoxContainer" parent="Control2/HBoxContainer/VBoxContainer2/Panel/DockableContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Control" type="Control" parent="Control2/HBoxContainer/VBoxContainer2/Panel/DockableContainer/Files"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Control2/HBoxContainer/VBoxContainer2/Panel/DockableContainer/Files"]
custom_minimum_size = Vector2(0, 29)
layout_mode = 2
theme_override_constants/separation = 10

[node name="LineEdit" type="LineEdit" parent="Control2/HBoxContainer/VBoxContainer2/Panel/DockableContainer/Files/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Search Files"

[node name="Button2" type="Button" parent="Control2/HBoxContainer/VBoxContainer2/Panel/DockableContainer/Files/HBoxContainer"]
custom_minimum_size = Vector2(29, 0)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="Control2/HBoxContainer/VBoxContainer2/Panel/DockableContainer/Files/HBoxContainer/Button2"]
modulate = Color(1, 1, 1, 0.764706)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 5.0
offset_right = -5.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_r5gtn")
expand_mode = 1
stretch_mode = 5

[node name="Button3" type="Button" parent="Control2/HBoxContainer/VBoxContainer2/Panel/DockableContainer/Files/HBoxContainer"]
custom_minimum_size = Vector2(29, 0)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="Control2/HBoxContainer/VBoxContainer2/Panel/DockableContainer/Files/HBoxContainer/Button3"]
modulate = Color(1, 1, 1, 0.764706)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 5.0
offset_right = -5.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("7_hmtfy")
expand_mode = 1
stretch_mode = 5

[node name="Tree" type="Tree" parent="Control2/HBoxContainer/VBoxContainer2/Panel/DockableContainer/Files"]
layout_mode = 2
size_flags_vertical = 3

[node name="Spaces" type="VBoxContainer" parent="Control2/HBoxContainer/VBoxContainer2/Panel/DockableContainer"]
visible = false
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="Control" type="Control" parent="Control2/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Control2/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 29)
layout_mode = 2
theme_override_constants/separation = 10

[node name="ProjectName" type="Label" parent="Control2/HBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Untitled"
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="Control2/HBoxContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(29, 0)
layout_mode = 2
texture = ExtResource("8_f420e")
expand_mode = 1
stretch_mode = 5

[node name="Control" type="Control" parent="Control2/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Control2/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="Button2" type="Button" parent="Control2/HBoxContainer/VBoxContainer/HBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_e4rg5")
theme_override_styles/pressed = SubResource("StyleBoxFlat_b1aso")
toggle_mode = true
button_pressed = true
text = " Start Guide"
icon = ExtResource("9_7w1fw")
alignment = 0
text_overrun_behavior = 3

[node name="TextureButton" type="TextureButton" parent="Control2/HBoxContainer/VBoxContainer/HBoxContainer/HBoxContainer/Button2"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -25.0
offset_top = -8.5
offset_right = -7.0
offset_bottom = 9.5
grow_horizontal = 0
grow_vertical = 2
texture_normal = ExtResource("10_1aiwj")
ignore_texture_size = true
stretch_mode = 5

[node name="Button3" type="Button" parent="Control2/HBoxContainer/VBoxContainer/HBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_e4rg5")
theme_override_styles/pressed = SubResource("StyleBoxFlat_b1aso")
toggle_mode = true
text = " Test 2"
icon = ExtResource("9_5ku5e")
alignment = 0
text_overrun_behavior = 3

[node name="TextureButton" type="TextureButton" parent="Control2/HBoxContainer/VBoxContainer/HBoxContainer/HBoxContainer/Button3"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -25.0
offset_top = -8.5
offset_right = -7.0
offset_bottom = 9.5
grow_horizontal = 0
grow_vertical = 2
texture_normal = ExtResource("10_1aiwj")
ignore_texture_size = true
stretch_mode = 5

[node name="Button4" type="Button" parent="Control2/HBoxContainer/VBoxContainer/HBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_e4rg5")
theme_override_styles/pressed = SubResource("StyleBoxFlat_b1aso")
toggle_mode = true
text = " Test 2"
icon = ExtResource("12_5qf4r")
alignment = 0
text_overrun_behavior = 3

[node name="TextureButton" type="TextureButton" parent="Control2/HBoxContainer/VBoxContainer/HBoxContainer/HBoxContainer/Button4"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -25.0
offset_top = -8.5
offset_right = -7.0
offset_bottom = 9.5
grow_horizontal = 0
grow_vertical = 2
texture_normal = ExtResource("10_1aiwj")
ignore_texture_size = true
stretch_mode = 5

[node name="Control2" type="Control" parent="Control2/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Panel" type="Panel" parent="Control2/HBoxContainer/VBoxContainer/Control2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="Control2/HBoxContainer/VBoxContainer/Control2/Panel"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control2/HBoxContainer/VBoxContainer/Control2/Panel/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="Control2/HBoxContainer/VBoxContainer/Control2/Panel/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "No Articles Selected"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RichTextLabel" type="RichTextLabel" parent="Control2/HBoxContainer/VBoxContainer/Control2/Panel/CenterContainer/VBoxContainer"]
clip_contents = false
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
bbcode_enabled = true
text = "[center]No articles selected for viewing or editing. Please create a new article or select an already made article."
scroll_active = false

[node name="VBoxContainer" type="VBoxContainer" parent="Control2/HBoxContainer/VBoxContainer/Control2/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Control2/HBoxContainer/VBoxContainer/Control2/Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Start Guide to Mundus"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Control2/HBoxContainer/VBoxContainer/Control2/Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Control2/HBoxContainer/VBoxContainer/Control2/Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_stretch_ratio = 0.5

[node name="Label" type="Label" parent="Control2/HBoxContainer/VBoxContainer/Control2/Panel/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Guide List"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CheckBox" type="CheckBox" parent="Control2/HBoxContainer/VBoxContainer/Control2/Panel/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Create your first Generic Article"

[node name="CheckBox2" type="CheckBox" parent="Control2/HBoxContainer/VBoxContainer/Control2/Panel/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Fill the Article with info"

[node name="CheckBox3" type="CheckBox" parent="Control2/HBoxContainer/VBoxContainer/Control2/Panel/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Create your first Link Points"

[node name="CheckBox4" type="CheckBox" parent="Control2/HBoxContainer/VBoxContainer/Control2/Panel/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Create a Map"

[node name="CheckBox5" type="CheckBox" parent="Control2/HBoxContainer/VBoxContainer/Control2/Panel/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Create a Timeline"

[node name="CheckBox6" type="CheckBox" parent="Control2/HBoxContainer/VBoxContainer/Control2/Panel/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Keep on Building using Articles"

[node name="RichTextLabel" type="RichTextLabel" parent="Control2/HBoxContainer/VBoxContainer/Control2/Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/bold_font = ExtResource("13_tnq5r")
bbcode_enabled = true
text = "[center]Welcome to Mundus[/center]
Mundus is designed to be easy and understandable for all age groups and backgrounds to understand and build worlds of their own. whether that be for a D&D Campeign they want to setup or a novel they fancy creating. this is a platform for everyone to use and enjoy.

Now to get started there is a list of things you can achieve on the left of this Welcome Message, feel free to tick things of as you go along.

First the articles. the articles are the content in the world ie, swords, spells, rules, characters, buildings ect... you can create one by clicking the plus icon within the files panel. choose your article type and begin filling it.

Link points are strong teather points think of them like tags or keywords there stong links that other articles may follow. this allows Mundus to show strong links between articles that have the same or similar Links.

Creating a map can be done in the same way an article is created. However, you have the choice to import an image or build your own world using the map creator.

Timelines are unique in that they are not an article. infact they are rather the spine of your world. they allow you to link articles in cronalogical order and allow for changes within the map over different time periods. NOTE: maps will not be as ajustable if created from an image as oposed to the map creation tool. The timelines give structure to your world. you have two types of timelines...

[b]Fixed Timeline[/b]

This timeline is the timeline of your world from start to finish. There can only be one Fixed Timeline and it will be the foundation of your world. all artcles stem off this timeline.

[b]Generic Timeline[/b]

Much like a Generic Aricle this type of timeline is fluid and ajustable to your needs. you can have as little or as many as you desire. they can be used for all sorts of things. This is a more advanced area of the map for more info visit the \"Documantation\"

[center]Thats it!
Keep creating articles and fleshing out your world and enjoy the process of building your own world."

[node name="Control3" type="Control" parent="Control2/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.3

[node name="Panel" type="Panel" parent="Control2/HBoxContainer/VBoxContainer/Control3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("14_v20j8")

[node name="TabContainer" type="TabContainer" parent="Control2/HBoxContainer/VBoxContainer/Control3/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
tabs_rearrange_group = 0

[node name="Termainal" type="TabBar" parent="Control2/HBoxContainer/VBoxContainer/Control3/Panel/TabContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control2/HBoxContainer/VBoxContainer/Control3/Panel/TabContainer/Termainal"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Panel" type="Panel" parent="Control2/HBoxContainer/VBoxContainer/Control3/Panel/TabContainer/Termainal/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_3vtfq")

[node name="DebugText" type="RichTextLabel" parent="Control2/HBoxContainer/VBoxContainer/Control3/Panel/TabContainer/Termainal/VBoxContainer/Panel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 6.0
offset_right = -10.0
offset_bottom = -6.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/normal_font = ExtResource("15_t4xn5")
theme_override_fonts/bold_font = ExtResource("16_5unro")
theme_override_fonts/italics_font = ExtResource("17_fefu0")
theme_override_fonts/bold_italics_font = ExtResource("18_4f747")
theme_override_fonts/mono_font = ExtResource("15_t4xn5")
theme_override_font_sizes/mono_font_size = 24
bbcode_enabled = true

[node name="CMDLine" type="LineEdit" parent="Control2/HBoxContainer/VBoxContainer/Control3/Panel/TabContainer/Termainal/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 29)
layout_mode = 2

[node name="Quick Notes" type="TabBar" parent="Control2/HBoxContainer/VBoxContainer/Control3/Panel/TabContainer"]
visible = false
layout_mode = 2

[node name="TextEdit" type="TextEdit" parent="Control2/HBoxContainer/VBoxContainer/Control3/Panel/TabContainer/Quick Notes"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 11.0
offset_top = 7.0
offset_right = -11.0
offset_bottom = -7.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer3" type="VBoxContainer" parent="Control2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.3
theme_override_constants/separation = 10

[node name="Control" type="Control" parent="Control2/HBoxContainer/VBoxContainer3"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Control2/HBoxContainer/VBoxContainer3"]
custom_minimum_size = Vector2(0, 29)
layout_mode = 2
alignment = 1

[node name="TextureRect" type="TextureRect" parent="Control2/HBoxContainer/VBoxContainer3/HBoxContainer"]
custom_minimum_size = Vector2(70, 0)
layout_mode = 2
texture = ExtResource("9_3dk5g")
expand_mode = 3
stretch_mode = 5

[node name="Label" type="Label" parent="Control2/HBoxContainer/VBoxContainer3/HBoxContainer/TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "v0.0.1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Panel" type="Panel" parent="Control2/HBoxContainer/VBoxContainer3"]
layout_mode = 2
size_flags_vertical = 3

[node name="DockableContainer" type="Container" parent="Control2/HBoxContainer/VBoxContainer3/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_right = -9.0
offset_bottom = -7.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_1uq5w")
tab_alignment = 0
layout = SubResource("Resource_aeven")

[node name="Inspector" type="VBoxContainer" parent="Control2/HBoxContainer/VBoxContainer3/Panel/DockableContainer"]
visible = false
layout_mode = 2

[node name="Dictionary" type="VBoxContainer" parent="Control2/HBoxContainer/VBoxContainer3/Panel/DockableContainer"]
layout_mode = 2

[connection signal="id_pressed" from="Control2/HBoxContainer/VBoxContainer2/MenuBar/File" to="." method="_on_file_id_pressed"]
[connection signal="text_submitted" from="Control2/HBoxContainer/VBoxContainer/Control3/Panel/TabContainer/Termainal/VBoxContainer/CMDLine" to="Control2/HBoxContainer/VBoxContainer/Control3/Panel" method="_on_CMDLine_text_entered"]
